# circadian-scp-upload

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
circadian_scp_upload/: __init__.py  checksum.py  client.py  screener.py  transfer.py  utils.py
daily_scp_sync/: __init__.py  checksum.py  remote_client.py  transfer.py  utils.py
diurnal_scp_upload/: transfer.py
tests/: .env.template  test_directory_upload.py  test_file_upload.py  test_static_types.py  test_upload.py  test_utils.py  utils.py
