[tool.poetry]
name = "circadian_scp_upload"
version = "0.2.0"
description = ""
authors = ["Moritz Makowski <moritz@dostuffthatmatters.dev>"]
readme = "README.md"
packages = [{ include = "circadian_scp_upload" }]

[tool.poetry.dependencies]
python = "^3.10"
fabric = "^3.1.0"
pydantic = "^2.0.2"
filelock = "^3.12.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
pytest = "^7.4.0"

[tool.black]
line-length = 88

[tool.mypy]
strict = true
implicit_reexport = true
no_warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fabric.*", "dotenv"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
