[project]
name = "circadian_scp_upload"
version = "0.5.0"
description = "Resumable, interruptible, SCP upload client for any files or directories generated day by day"
authors = [{ name = "Moritz Makowski", email = "moritz.makowski@tum.de" }]
dependencies = [
    "pydantic>=2.9.2",
    "filelock>=3.16.1",
    "fabric>=3.2.2",
    "tum-esm-utils>=2.3.2",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Software Development :: Libraries",
    "Topic :: System",
    "Topic :: System :: Archiving",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Logging",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "tum",
    "utils",
    "utilities",
    "environmental",
    "sensing",
    "modeling",
    "python",
    "library",
    "utilities",
    "pydoc-markdown",
]

[project.urls]
repository = "https://github.com/dostuffthatmatters/circadian-scp-upload"
documentation = "https://github.com/dostuffthatmatters/circadian-scp-upload"

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.1",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-order>=1.3.0",
    "pytest-cov>=5.0.0",
    "yapf>=0.40.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
build.includes = ["circadian_scp_upload"]
build.excludes = ["tests"]

[tool.mypy]
strict = true
implicit_reexport = true
no_warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fabric.*", "dotenv"]
ignore_missing_imports = true

[tool.yapf]
based_on_style = "facebook"
coalesce_brackets = true
split_before_dict_set_generator = true
each_dict_entry_on_separate_line = false
spaces_around_subscript_colon = true
